--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -22,7 +22,11 @@ header.header-top.lock-padding
 						a(href="my-data.html").header-top__menu-link.menu__link Аккаунт
 					li.header-top__list-item.menu__item
 						a(href="cart.html").header-top__menu-link.menu__link.cart-link Корзина
-							span.cart-link-span 1
+							.cart-img-block
+								.cart-img-box 
+									svg.cart-img(width="25" height="25")  
+										use(xlink:href="./assets/images/sprite.svg#shopping-bag" alt="cart icon")
+									span.cart-img-block__span 2
 					li.header-top__list-item.menu__item
 						a(href="#modal01").header-top__menu-link.menu__link.modal__link Поиск
 		.header-top__logo-box.lock-padding
