--- a/src/templates/pages/help.pug
+++ b/src/templates/pages/help.pug
@@ -19,7 +19,7 @@ block content
 									a.help__tabs-switch.tabs__link(href="#block02")  Какие условия при доставке курьером?
 									a.help__tabs-switch.tabs__link(href="#block03") Памятка по доставке и возврату
 									a.help__tabs-switch.tabs__link(href="#block04")  Какие условия при доставке в постамат?
-									a.help__tabs-switch.tabs__link._active(href="#block05")  Таблица размеров
+									a.help__tabs-switch.tabs__link#size-table-link(href="#block05")  Таблица размеров
 							.help__tabs-items.tabs__items
 								.help__tabs-block.tabs__item#block01   
 									p.help__tabs-text Ты можешь частично или полностью отменить заказ в течение 15 минут после создания.
