--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -24,7 +24,7 @@
         &__content
             // column-gap: 20px
         &__images
-            padding: 0
+            padding: 0 60px 0 0
 
     .help
         &__tabs
@@ -175,7 +175,10 @@
         &__info
             flex: auto
             width: 100%
-
+        &__images
+            padding: 0
+        &__reviews-slider
+            max-width: 100%
     // vertical slider
     .slider-vertical
         .swiper-button-prev,
@@ -566,6 +569,10 @@
         &__row
             flex-direction: column
 
+    .modal
+        &__content
+            padding: 50px 25px
+
 @media screen and (max-width: 425px)
     
     // contacts page
@@ -613,3 +620,5 @@
                 max-width: 100%
         &__sign-in-btn-in
             margin-bottom: 20px
+        &__reviews-btn
+            max-width: 100%
