--- a/src/styles/common/header.sass
+++ b/src/styles/common/header.sass
@@ -38,29 +38,38 @@ header._hidden
 		text-decoration: underline
 	.cart-link
 		position: relative
-	.cart-link-span
+	.cart-img-block
 		position: absolute
-		top: -5px
+		top: 0
 		left: auto
 		right: 0px
-		width: 25px
-		height: 25px
-		display: inline-flex
+		width: 20px
+		height: 20px
+		display: flex
 		justify-content: center
 		align-items: center
 		border-radius: 50%
-		background-color: $color-White
-		color: $color-graphite
-		font-size: 14px
+		color: $color-White
+		font-size: 13px
 		line-height: 110%
+		text-align: center
 		visibility: visible
 		opacity: 1
 		transition: visibility 0.3s ease 0s
-	.cart-link-span._hidden
+	.cart-img-block_hidden
 		visibility: hidden
 		opacity: 0
 		pointer-events: none
 		user-select: none
+	.cart-img-box
+		width: 100%
+		height: 100%
+		position: relative
+	.cart-img
+		position: absolute
+		top: -7px
+		left: -2px
+		color: $color-White
 	&__logo-box
 		position: absolute
 		top: 20px
