--- a/src/styles/common/modal.sass
+++ b/src/styles/common/modal.sass
@@ -52,7 +52,8 @@
         margin: 32px 0 0 0
         width: 100%
         height: 100%
-        input
+        input,
+        textarea
             width: 100%
             min-height: 50px
             background-color: $color-Gray_4
@@ -63,6 +64,8 @@
             color: $color-Black
             margin-bottom: 30px
             &:placeholder
+        textarea
+            resize: none
 
     &__search
         max-width: 950px
@@ -214,6 +217,37 @@
         text-transform: uppercase
         &:hover
             box-shadow: 0 0 3px 3px $color-graphite
+
+    &__subscribe-content
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 100%
+        max-width: 450px
+        min-height: 155px
+        padding: 20px
+    &__subscribe-text
+        padding: 10px
+        text-align: center
+        line-height: 140%
+
+
+    &__reviews-btn-block
+        width: 100%
+    &__reviews-btn
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 100%
+        max-width: 159px
+        min-height: 50px
+        border-radius: 5px
+        background-color: #3D3D3D
+        color: #ffffff
+        font-size: 14px
+        line-height: 150%
+        text-transform: uppercase
+        margin: 20px 0
 
 .modal._active
     opacity: 1
