--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -15,6 +15,8 @@ block content
                     tr
                         td
                             a.map-table__link(href="home-page.html" target="_blank") Главная
+                        td
+                            a.map-table__link.modal__link(href="#modal04") Подписка (modal)
                     tr
                         td
                             a.map-table__link(href="for-men.html" target="_blank") Мужчинам
