--- a/src/templates/pages/catalog.pug
+++ b/src/templates/pages/catalog.pug
@@ -19,15 +19,15 @@ block content
                                     +icon("icon-arrow-down", 12, 12)
                             .custom-select__body
                                 label.custom-select__label-item Сортировать по
-                                    input(type="hidden", name="option")
+                                    input(type="hidden" name="option")
                                 label.custom-select__label-item Рекомендованное
-                                    input(type="hidden", name="option")
+                                    input(type="hidden" name="option")
                                 label.custom-select__label-item Самое новое
-                                    input(type="hidden", name="option")
+                                    input(type="hidden" name="option")
                                 label.custom-select__label-item Цена: высокая-низкая
-                                    input(type="hidden", name="option")
+                                    input(type="hidden" name="option")
                                 label.custom-select__label-item Цена: низкая-высокая
-                                    input(type="hidden", name="option")
+                                    input(type="hidden" name="option")
                     .goods__content
                         .goods__filter-block 
                             form.goods__filter-form(action="#")
@@ -80,12 +80,12 @@ block content
                                                     label.goods__filter-range-label
                                                         span.goods__filter-range-span.from от&nbsp;
                                                         span.goods__filter-range-span.number-spaced#price-from 
-                                                        input.goods__filter-range-input#input-0(type="number" name="range-slider-input" min="99" max="999999" placeholder="2789" data-price-min="2789" value="2789")
+                                                        input.goods__filter-range-input.number-spaced#input-0(type="text" name="range-slider-input" min="99" max="999999" placeholder="2789" data-price-min="2789" value="2789")
                                                         span.goods__filter-range-span &#8381;
                                                     label.goods__filter-range-label
                                                         span.goods__filter-range-span.to до&nbsp;
                                                         span.goods__filter-range-span.number-spaced#price-to
-                                                        input.goods__filter-range-input#input-1(type="number" name="range-slider-input" min="99" max="999999" placeholder="216789" data-price-max="216789" value="216789")
+                                                        input.goods__filter-range-input.number-spaced#input-1(type="text" name="range-slider-input" min="99" max="999999" placeholder="216789" data-price-max="216789" value="216789")
                                                         span.goods__filte-ranger-span  &#8381;
                                                 .goods__filter-range-slider#range-slider
                                     .goods__filter-ac-heading.ac 
