--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -1358,7 +1358,8 @@ header._white {
       font-size: 18px;
       line-height: 25px; }
       .goods__sorting .custom-select__inner {
-        padding: 0 25px 0 0; }
+        padding: 0 25px 0 0;
+        cursor: pointer; }
       .goods__sorting .custom-select__current {
         width: 100%;
         height: 100%;
@@ -1370,7 +1371,8 @@ header._white {
         right: 0;
         -webkit-transition: all 0.3s ease 0s;
         -o-transition: all 0.3s ease 0s;
-        transition: all 0.3s ease 0s; }
+        transition: all 0.3s ease 0s;
+        pointer-events: none; }
       .goods__sorting .custom-select__body {
         margin-top: 15px;
         position: absolute;
