--- a/src/templates/pages/subcategory.pug
+++ b/src/templates/pages/subcategory.pug
@@ -10,28 +10,169 @@ block content
             section.section.goods
                 .container.goods__container
                     .section__heading
-                        h1.section__title Мужская одежда
+                        h1.section__title=title
+                    .goods__sorting 
+                        .custom-select 
+                            .custom-select__inner
+                                .custom-select__current Сортировать по 
+                                .custom-select__icon
+                                    +icon("icon-arrow-down", 12, 12)
+                            .custom-select__body
+                                label.custom-select__label-item Сортировать по
+                                    input(type="hidden" name="option")
+                                label.custom-select__label-item Рекомендованное
+                                    input(type="hidden" name="option")
+                                label.custom-select__label-item Самое новое
+                                    input(type="hidden" name="option")
+                                label.custom-select__label-item Цена: высокая-низкая
+                                    input(type="hidden" name="option")
+                                label.custom-select__label-item Цена: низкая-высокая
+                                    input(type="hidden" name="option")
                     .goods__content
-                        .goods__filter-box 
+                        .goods__filter-block 
                             form.goods__filter-form(action="#")
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Куртки
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Майки
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Трикотаж
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Футболки
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Толстовки
-                                label.goods__filter-label
-                                    input.goods__filter-input(type="checkbox", name="for men")
-                                    span.goods__filter-span Смотреть все
+                                .goods__filter-types
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Куртки
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Майки
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Трикотаж
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Футболки
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Толстовки
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Шорты
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Носки
+                                    label.goods__filter-label
+                                        input.goods__filter-input(type="checkbox" name="")
+                                        span.goods__filter-span Смотреть все
+                                .goods__filter-ac-container 
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Пол  
+                                            span &nbsp;(1)
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Мужчины
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Женщины
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Унисекс
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Поиск по цене
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                .goods__filter-range-inputs
+                                                    label.goods__filter-range-label
+                                                        span.goods__filter-range-span.from от&nbsp;
+                                                        span.goods__filter-range-span.number-spaced#price-from 
+                                                        input.goods__filter-range-input.number-spaced#input-0(type="text" name="range-slider-input" min="99" max="999999" placeholder="2789" data-price-min="2789" value="2789")
+                                                        span.goods__filter-range-span &#8381;
+                                                    label.goods__filter-range-label
+                                                        span.goods__filter-range-span.to до&nbsp;
+                                                        span.goods__filter-range-span.number-spaced#price-to
+                                                        input.goods__filter-range-input.number-spaced#input-1(type="text" name="range-slider-input" min="99" max="999999" placeholder="216789" data-price-max="216789" value="216789")
+                                                        span.goods__filte-ranger-span  &#8381;
+                                                .goods__filter-range-slider#range-slider
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Со скидкой
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Распродажа
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Размер
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span 3.5 (RU 34,5)
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span 4.5 (RU 35,5)
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span 5.5 (RU 36,5)
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Цвет
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Черный
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Зеленый
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Синий
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Красный
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Коричневый
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Мультицвет
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Серый
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Оранжевый
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Бренд
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Nike
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Reebook
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Adidas
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Puma
+                                    .goods__filter-ac-heading.ac 
+                                        button.ac-trigger Материал
+                                            span 
+                                        .ac-panel
+                                            .goods__filter-ac-content
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Микрофибра
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Флис
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Мембрана
+                                                label.goods__filter-label
+                                                    input.goods__filter-input(type="checkbox" name="")
+                                                    span.goods__filter-span Акрил
                         .goods__items.mens-wear
                             .goods__item
                                 .add-to-cart__box 
