--- a/src/templates/pages/catalog.pug
+++ b/src/templates/pages/catalog.pug
@@ -173,6 +173,8 @@ block content
                                                 label.goods__filter-label
                                                     input.goods__filter-input(type="checkbox" name="")
                                                     span.goods__filter-span Акрил
+                                button.goods__filter-btn(type="submit") Показать
+                                button.goods__filter-btn_cancel(type="reset") Очистить фильтр
                         .goods__items.mens-wear
                             .goods__item
                                 .add-to-cart__box 
