--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -2,18 +2,77 @@ header.header-top.lock-padding
 	.container.header-top__container 
 		.header-top__menu.menu
 			.header-top__menu-icon.menu__icon
-				span  
+				span
+			button.sub-menu-back-btn(type="button")
 			nav.header-top__menu-body.menu__body
-				ul.header-top__list.menu__list
+				ul.header-top__list.left.menu__list
 					li.header-top__list-item.menu__item
 						a(href="for-men.html").header-top__menu-link.menu__link Мужчинам
+						button.menu__link-btn(type="button") 
+						.header-top__sub-list-block
+							.container
+								.header-top__sub-list-items
+									.header-top__sub-list-item-col 
+										span Рекомендованное
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks01 = ["Бестселлеры","Лучшие подарки","Не пропусти","Экологичные материалы","Календарь релизов"]
+										ul.header-top__sub-list 
+											each link in menuLinks01
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
+									.header-top__sub-list-item-col 
+										span Обувь
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks02 = ["Вся обувь","Обувь из распродажи","Спортивный стиль","Бег","Баскетбол","Футбол","Фитнес","Скейтбординг","Теннис","Гольф"]
+										ul.header-top__sub-list 
+											each link in menuLinks02
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
+									.header-top__sub-list-item-col 
+										span Одежда
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks03 = ["Вся одежда","Одежда из распродажи","Худи и толстовки","Майки и футболки","Брюки и тайсы","Спортивные костюмы","Шорты","Куртки и жилеты","Форма и джерси","Рубашки-поло","Унисекс","Экологичные материалы","Носки"]
+										ul.header-top__sub-list 
+											each link in menuLinks03
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
+									.header-top__sub-list-item-col 
+										span Аксессуары
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks04 = ["Все Акссессуары","Снаряжение","Сумки","Рюкзаки"]
+										ul.header-top__sub-list 
+											each link in menuLinks04
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
+									.header-top__sub-list-item-col 
+										span Новинки
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks05 = ["Все новинки","Новинки зимнего сезона","Новинки летнего сезона","Товары из США"]
+										ul.header-top__sub-list 
+											each link in menuLinks05
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
+									.header-top__sub-list-item-col 
+										span По виду спорта
+										button.menu__sub-link-btn(type="button")
+											-var menuLinks06 = ["Бег","Футбол","Баскетбол","НБА","Теннис","Гольф","Фитнес","Йога","Бокс"]
+										ul.header-top__sub-list 
+											each link in menuLinks06
+												li.header-top__sub-list-item
+													a.header-top__sub-list-link(href="#")=link
 					li.header-top__list-item.menu__item
 						a(href="for-women.html").header-top__menu-link.menu__link Женщинам
+						button.menu__link-btn(type="button") 
+					li.header-top__list-item.menu__item
+						a(href="for-women.html").header-top__menu-link.menu__link Детям
+						button.menu__link-btn(type="button") 
 					li.header-top__list-item.menu__item
 						a(href="collections.html").header-top__menu-link.menu__link Коллекции
+						button.menu__link-btn(type="button") 
 					li.header-top__list-item.menu__item
 						a(href="kinds-of-sports.html").header-top__menu-link.menu__link Виды спорта
-				ul.header-top__list.menu__list
+						button.menu__link-btn(type="button") 
+				ul.header-top__list.right.menu__list
 					li.header-top__list-item.menu__item
 						a(href="contacts.html").header-top__menu-link.menu__link Контакты
 					li.header-top__list-item.menu__item
@@ -36,9 +95,9 @@ header.header-top.lock-padding
 header.header-bottom.lock-padding
 	section.header-bottom__banner 
 		.header-bottom__img-box
-			img.header-bottom__img.header-bottom__img_for-men(src="assets/images/header-bottom-bg-img.jpg", alt="Фото мужчины")
-			img.header-bottom__img.header-bottom__img_collections._hidden(src="assets/images/header-bottom-bg-img-2.jpg", alt="Фото мужчины с канатом") 
-			img.header-bottom__img.header-bottom__img_kinds-of-sports._hidden(src="assets/images/header-bottom-bg-img-3.jpg", alt="Фото мужчины") 
+			img.header-bottom__img.header-bottom__img_for-men(src="assets/images/header-bottom-bg-img.jpg" alt="Фото мужчины")
+			img.header-bottom__img.header-bottom__img_collections._hidden(src="assets/images/header-bottom-bg-img-2.jpg" alt="Фото мужчины с канатом") 
+			img.header-bottom__img.header-bottom__img_kinds-of-sports._hidden(src="assets/images/header-bottom-bg-img-3.jpg" alt="Фото мужчины") 
 			//- два модификатора ниже при натяжке, вероятно, не понадобятся
 		.header-bottom__heading 
 			h1.header-bottom__title Мужчинам
